# ai-agent-lg

./: agent.py  console_app.py  main.py  pyproject.toml  requirements.txt  telegram_app.py  telegram_bot.py
src/: __init__.py
src/agents/: classifier.py  github.py  github_user.py  logical.py  router.py  therapist.py
src/config/: settings.py
src/database/: mongo_client.py
src/models/: schemas.py
src/utils/: graph_builder.py
